@@ -1,8 +1,14 @@
 cdebconf (0.140) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Remove myself as uploader.
 
- -- Frans Pop <fjp@debian.org>  Sat, 28 Feb 2009 16:26:10 +0100
+  [ Nicolas François ]
+  * src/template.c (remove_newlines): Fix the removal of trailing
+    newline for descriptions ending with a verbatim block. This helps
+    optimizing the screen usage in the newt frontend.
+
+ -- Frans Pop <fjp@debian.org>  Sun, 05 Apr 2009 00:43:10 +0200
 
 cdebconf (0.139) unstable; urgency=low
 
